--- a/1.21.9/src/main/resources/assets/ppl_utils/lang/ru_ru.json
+++ b/1.21.9/src/main/resources/assets/ppl_utils/lang/ru_ru.json
@@ -6,8 +6,10 @@
   "key.category.ppl_utils.general": "Pepeland Utils",
   "key.ppl_utils.go_to_lobby": "Отправиться в лобби",
 
+  "ppl_utils.midnightconfig.lobby_button_comment": "Лобби-кнопка",
   "ppl_utils.midnightconfig.lobby_button_enabled": "Включить лобби-кнопку",
   "ppl_utils.midnightconfig.lobby_button_tooltip_enabled": "Показывать подсказку при наведении на лобби-кнопку",
+  "ppl_utils.midnightconfig.join_leave_messages_rendering_comment": "Отображение сообщений при входе/выходе игроков",
   "ppl_utils.midnightconfig.do_join_leave_messages_rendering": "Отображать сообщения при входе/выходе игроков",
   "ppl_utils.midnightconfig.always_show_join_leave_messages_by": "Всегда показывать сообщения при входе/выходе данных игроков"
 }
