Command execution queue v0.2
Добавлена дополнительная клавиша  для отправки из буфера обмена, а не из настроек мода.

--- a/1.21.6/src/main/resources/assets/ppl_utils/lang/ru_ru.json
+++ b/1.21.6/src/main/resources/assets/ppl_utils/lang/ru_ru.json
@@ -84,5 +84,6 @@
   "ppl_utils.midnightconfig.chat_filter_words": "Слова фильтра",
   "ppl_utils.midnightconfig.executable_queue_comment": "Выполняемая очередь",
   "ppl_utils.midnightconfig.executable_queue_commands": "Команды",
-  "key.ppl_utils.executable_queue": "Выполнить очередь команд"
+  "key.ppl_utils.executable_queue": "Выполнить очередь команд",
+  "key.ppl_utils.executable_queue_clipboard": "Выполнить очередь команд из буфера обмена"
 }
