--- a/1.21.6/src/main/resources/assets/ppl_utils/lang/en_us.json
+++ b/1.21.6/src/main/resources/assets/ppl_utils/lang/en_us.json
@@ -84,5 +84,6 @@
   "ppl_utils.midnightconfig.chat_filter_words": "Filter words",
   "ppl_utils.midnightconfig.executable_queue_comment": "Executable Queue",
   "ppl_utils.midnightconfig.executable_queue_commands": "Commands",
-  "key.ppl_utils.executable_queue": "Execute command queue"
+  "key.ppl_utils.executable_queue": "Execute command queue",
+  "key.ppl_utils.executable_queue_clipboard": "Execute command queue from clipboard"
 }
